adds bonus-hunt

--- a/bundles/root/graphics/wager/index.html
+++ b/bundles/root/graphics/wager/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
+
+
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-	<style>
+    <head>
+        <meta charset="UTF-8">
+        <style>
 		body {
 			font-family: sans-serif;
 			color: white;
@@ -43,16 +45,16 @@
 			height: 50%;
 			width: 30px;
 		}
-	</style>
-</head>
-<body>
-	<span id="maxWagerMessage"></span>
-	<div class="progress-container">
-		<div class="progress">
-			<div id="progressValue" class="progress-value"></div>
-		</div>
-	</div>
-	<span id="currentWagerMessage"></span>
-	<script src="./index.js"/>
-</body>
+        </style>
+    </head>
+    <body>
+        <span id="maxWagerMessage"></span>
+        <div class="progress-container">
+            <div class="progress">
+                <div id="progressValue" class="progress-value"></div>
+            </div>
+        </div>
+        <span id="currentWagerMessage"></span>
+        <script src="./index.js"></script>
+    </body>
 </html>
